fixed spacing in panels

--- a/moon-jelly-ext/src/styles/App.css
+++ b/moon-jelly-ext/src/styles/App.css
@@ -12,7 +12,7 @@
     width: inherit;
 }
 .content {
-    margin-top: 160px;
+    margin-top: 4rem;
     padding: 0 (var(--spacer) / 1.5);
     flex: 1;
 }
@@ -33,7 +33,7 @@
     font-size: 1.3rem;
 }
 .jellyfish {
-    padding-top: var(--spacer) * 2;
+    padding-top: var(--spacer);
     width: var(--appWidth) / 1.5;
     height: var(--appHeight) / 1.2;
 }
