--- a/moon-jelly-ext/src/styles/Form.css
+++ b/moon-jelly-ext/src/styles/Form.css
@@ -12,6 +12,7 @@
 .formTitle {
     font-size: var(--font-size-h2);
     margin: 0;
+    text-align: center;
 }
 
 .formDescription {
